--- a/config.js.example
+++ b/config.js.example
@@ -1,11 +1,9 @@
-
 module.exports = {
-    YOUTRACK_URL: "https://youtrack.jetbrains.com/",
-    SITE_NAME: "My YouTrack",
+    YOUTRACK_URL: "https://example.youtrack.cloud",
+    SITE_NAME: "MyCompany - ",
 
     WEBHOOK_URL: "https://discord.com/api/webhooks/XXX",
-    SENDER_NAME: "YouTrack",
-    AVATAR_URL: "https://pbs.twimg.com/profile_images/1206619676035469312/oXBhRETv.jpg",
+    SENDER_NAME: "YouTrackBot",
 
     COLOR_POSITIVE: "22C55E",
     COLOR_REGULAR: "3093D1",
