--- a/config_users.js.example
+++ b/config_users.js.example
@@ -4,7 +4,7 @@ The script will identify the watchers of an issue and send a notification to the
 
 Explanations of attributes:
     - youtrackUsername: Used to identify the user who is watching the issue.
-    - webhookUrl: The webhookUrl to the channel where the message should be sent
+    - webhookUrl (optional): The webhookUrl to the channel where the message should be sent
     - discordUserID (optional): Used to mention a user in discord if the message refers to them
 
 How to get the discord user id:
